[project]
name = "cc-to-weave"
version = "0.1.0"
description = "Claude Code to W&B Weave exporter"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anywidget>=0.9.21",
    "marimo>=0.17.6",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "weave>=0.52.17",
]

[tool.marimo.runtime]
